kubernetes/apps/network/unifi/app/backendtrafficpolicy.yaml
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: BackendTrafficPolicy
metadata:
  name: unifi
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: unifi
  timeout:
    http:
      requestTimeout: "0s"
      connectionIdleTimeout: "0s"
